--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 com.google.keystone.agent.plist
 
 com.google.keystone.xpcservice.plist
+
+com.valvesoftware.steamclean.plist
+
+com.jetbrains.AppCode.BridgeService.plist
