--- a/com.nathansbud.dreambackup.plist
+++ b/com.nathansbud.dreambackup.plist
@@ -4,6 +4,8 @@
 	<dict>
 		<key>Label</key>
 		<string>com.nathansbud.dreambackup</string>
+		<key>Disabled</key>
+		<true/>
 		<key>Program</key>
 		<string>/Users/zackamiton/Code/PythonNonsense/DreamBackup/backup.py</string>
 		<key>ProgramArguments</key>
