--- a/com.nathansbud.monitorrent.plist
+++ b/com.nathansbud.monitorrent.plist
@@ -15,6 +15,8 @@
         <array>
             <string>/Users/zackamiton/Torrents/SoulSeek Downloads</string>
         </array>
+		<key>Disabled</key>
+		<true/>
 	</dict>
 </plist>
 
