--- a/com.nathansbud.tunelogger.plist
+++ b/com.nathansbud.tunelogger.plist
@@ -15,6 +15,8 @@
         <array>
             <string>/Users/zackamiton/Music/iTunes/iTunes Library.xml</string>
         </array>
+        <key>Disabled</key>
+        <true/>
 	</dict>
 </plist>
 
